@@ -433,6 +433,7 @@ Release 0.92.0 - Unreleased
    HBASE-4792  SplitRegionHandler doesn't care if it deletes the znode or not,
                leaves the parent region stuck offline
    HBASE-4793  HBase shell still using deprecated methods removed in HBASE-4436
+   HBASE-4801  alter_status shell prints sensible message at completion
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
